# c-_benchmarks

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cpp_benchmarks.cpp  perftests.cpp
cmake/: google.cmake
include/: common.h
src/: arithmetic.cpp  associative.cpp  cpp_benchmarks.cpp  empty.cpp  function.cpp  logical.cpp  main.cpp  memory.cpp  pointer.cpp  string.cpp  string_formatting.cpp  virtual.cpp
